# voxel-rs

./: Cargo.toml  LICENSE  README.md
assets/shaders/: branchless_dda.wgsl  brickmap_upload.wgsl  image_recolor.wgsl  shader.wgsl  voxel_volume.wgsl
src/: app.rs  camera.rs  gfx.rs  main.rs  math.rs  render.rs  renderer.rs  texture.rs  voxel.rs
src/core/: app.rs  camera.rs  mod.rs
src/gfx/: bind_group.rs  buffer.rs  context.rs  mod.rs  renderer.rs  texture.rs
src/render/: bind_group.rs  context.rs  renderer.rs  texture.rs
src/voxel/: brickmap.rs  mod.rs  renderer.rs  voxel_renderer.rs  world.rs
src/voxel/brickmap/: brickgrid.rs  brickmap_cache.rs  manager.rs  mod.rs  renderer.rs
src/voxel/brickworld/: brickgrid.rs  brickmap.rs  brickmap_cache.rs  mod.rs  shading_table.rs  util.rs  voxel_renderer.rs
src/voxel/world/: chunk.rs  manager.rs  mod.rs
