[package]
name = "voxel-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
glam = "0.23.0"
log = "0.4.17"
pollster = "0.3.0"
simdnoise = "3.1.6"
wgpu = "0.15.1"
winit = "0.28.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
