[package]
name = "voxel-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytemuck = { version = "1.15.0", features = ["derive"] }
env_logger = "0.11.3"
glam = "0.26.0"
log = "0.4.21"
ndarray = "0.15.6"
pollster = "0.3.0"
simdnoise = "3.1.6"
wgpu = "0.19.3"
winit = "0.29.15"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
